--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,6 @@ on:
   pull_request:
     branches: [ "main" ]
 
-# Omgevingvariabelen voor de hele workflow
 env:
   AWS_REGION: "us-east-1"
   TERRAGRUNT_VERSION: "0.45.0"
@@ -16,8 +15,6 @@ jobs:
   deploy-test:
     name: 'Deploy to TEST'
     runs-on: ubuntu-latest
-    environment: test
-
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
@@ -37,30 +34,32 @@ jobs:
         working-directory: ./infrastructure/live/test
         run: terragrunt run-all apply --terragrunt-non-interactive
         env:
-          # AWS Academy Credentials
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
-          
-          # Secret Injection (Worden TF_VAR_ variabelen in je modules)
           TF_VAR_db_password: ${{ secrets.DB_PASSWORD }}
           TF_VAR_media_signing_key: ${{ secrets.MEDIA_SECRET }}
 
-  # Optioneel: Deploy naar PROD na goedkeuring of succesvolle test
   deploy-prod:
     name: 'Deploy to PROD'
     needs: deploy-test
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
-    environment: prod
-
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Install Terraform & Terragrunt
-        # (Herhaal installatie stappen zoals hierboven)
-        
+      - name: Install Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: ${{ env.TERRAFORM_VERSION }}
+          terraform_wrapper: false
+
+      - name: Install Terragrunt
+        uses: autero1/action-terragrunt@v1.3.2
+        with:
+          terragrunt_version: ${{ env.TERRAGRUNT_VERSION }}
+
       - name: Terragrunt Init & Apply (PROD)
         working-directory: ./infrastructure/live/prod
         run: terragrunt run-all apply --terragrunt-non-interactive
